--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "next": "^10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.29.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "nodemon": "^2.0.6",
+    "prettier": "2.2.1"
   }
 }
